--- a/package.json
+++ b/package.json
@@ -10,10 +10,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.26.1",
     "ejs": "^3.1.6",
     "express": "^4.17.2"
   },
   "devDependencies": {
     "jest": "^27.5.0"
+  },
+  "jest": {
+    "collectCoverage": true
   }
 }
